# betc

./: .gitignore  .pre-commit-config.yaml  .tool-versions  Makefile  README.md  docker-compose.yml  pyproject.toml  sample.env
src/betc/: __init__.py
src/betc/model/: base.py  config.py  config_factory.py  dataset.py  examples.py  experimentation.py  run_experiments.py  service_manager.py  trainer.py
